# comp-stack

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: config.py  dependencies.py  exc.py  main.py  schema.py  service.py  utils.py
app/processing/: __init__.py  filter.py  summarizer.py
scripts/: build.sh  formatting.sh
tests/: conftest.py
tests/api_tests/: conftest.py  test_client.py  test_ping.py  test_validation.py
tests/mocks/: data.csv
tests/unit_tests/: conftest.py  test_filter.py  test_summarize.py
